--- a/frontend/static/create-blog.html
+++ b/frontend/static/create-blog.html
@@ -14,6 +14,8 @@
     <input type="submit" value="create">
   </form>
   <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const user = Object.fromEntries(urlParams.entries());
     const createBlogForm = document.getElementById('create-blog-form');
     createBlogForm.addEventListener('submit', (event) => {
       event.preventDefault();
@@ -40,7 +42,7 @@
           alert('error happened');
           return ;
         }
-        window.location = 'http://localhost:4000/home.html';
+        window.location = `http://localhost:4000/home.html?id=${user.id}&email=${user.email}`;
       })
     })
   </script>
