--- a/frontend/static/home.html
+++ b/frontend/static/home.html
@@ -8,6 +8,8 @@
 <body>
   <div id="welcome"></div>
   <button id="create-blog-btn">create blog</button>
+  <button id="change-password-btn">change password</button>
+  <button id="logout-btn">logout</button>
   <div id="blogs"></div>
   <script>
     const urlParams = new URLSearchParams(window.location.search);
@@ -41,7 +43,25 @@
 
     const createBlogBtn = document.getElementById('create-blog-btn');
     createBlogBtn.addEventListener('click', (event) => {
-      window.location = 'http://localhost:4000/create-blog.html'
+      window.location = `http://localhost:4000/create-blog.html?id=${user.id}&email=${user.email}`
+    });
+
+    const changePasswordBtn = document.getElementById('change-password-btn');
+    changePasswordBtn.addEventListener('click', (event) => {
+      window.location = `http://localhost:4000/change-password.html?id=${user.id}&email=${user.email}`
+    });
+
+    const logoutBtn = document.getElementById('logout-btn');
+    logoutBtn.addEventListener('click', (event) => {
+      fetch('http://localhost:3000/auth/logout', {
+        method: 'POST',
+        credentials: 'include'
+      }).then((res) => {
+        return res.text()
+      }).then((res) => {
+        console.log(res)
+        window.location = `http://localhost:4000/index.html`;
+      })
     });
   </script>
 </body>
