--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -32,6 +32,7 @@
         method: "POST",
         headers: customHeaders,
         body: JSON.stringify(data),
+        credentials: 'include'
       }).then((res, err) => {
         return res.json()
       }).then((res) => {
