--- a/frontend/static/change-password.html
+++ b/frontend/static/change-password.html
@@ -6,11 +6,14 @@
     <title>Blog Site</title>
 </head>
 <body>
+    <h1>Change Password</h1>
     <form id="password-change-form">
-        <label for="password">New Password</label>
+        <label for="password">New Password: </label>
         <input type="password" name="password" id="password">
-        <label for="confirmPassword">Confirm Password</label>
+        <br>
+        <label for="confirmPassword">Confirm Password: </label>
         <input type="password" name="confirmPassword" id="confirmPassword">
+        <br>
         <input type="submit" value="change password">
     </form>
     <script>
