--- a/frontend/static/create-blog.html
+++ b/frontend/static/create-blog.html
@@ -6,11 +6,14 @@
   <title>Blog Site</title>
 </head>
 <body>
+  <h1>Create Blog</h1>
   <form id="create-blog-form">
-    <label for="title">Title</label>
+    <label for="title">Title: </label>
     <input type="text" name="title" id="title">
-    <label for="content">Content</label>
+    <br>
+    <label for="content">Content: </label>
     <input type="text" name="content", id="content">
+    <br>
     <input type="submit" value="create">
   </form>
   <script>
