--- a/frontend/static/register.html
+++ b/frontend/static/register.html
@@ -6,12 +6,15 @@
   <title>Blog Site</title>
 </head>
 <body>
+  <h1>Registration Page</h1>
   <form id="registration-form">
-    <label for="email">Email</label>
+    <label for="email">Email: </label>
     <input type="email" name="email" id="email">
-    <label for="password">Password</label>
+    <br>
+    <label for="password">Password: </label>
     <input type="password" name="password" id="password">
-    <input type="submit">
+    <br>
+    <input type="submit" value="signup">
   </form>
   <script>
     const registrationForm = document.getElementById('registration-form');
